fix: :lipstick: Increase the visibility of the Noise effect on the page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
   display: block;
   width: 100vw;
   height: 100vh;
-  opacity: 0.08;
+  opacity: 0.1;
   background-image: url("../assets/img/noise.gif");
   overflow: hidden;
   position: fixed;
